--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "dist/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
-    "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build",
+    "dev": "cross-env PAYLOAD_CONFIG_PATH=./payload.config.js nodemon",
+    "build:payload": "cross-env PAYLOAD_CONFIG_PATH=./payload.config.js payload build",
     "build:server": "tsc",
     "build": "npm run copyfiles && npm run build:payload && npm run build:server",
     "serve": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production node dist/server.js",
     "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
-    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
-    "generate:graphQLSchema": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:graphQLSchema"
+    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=./payload.config.js payload generate:types",
+    "generate:graphQLSchema": "PAYLOAD_CONFIG_PATH=./payload.config.js payload generate:graphQLSchema"
   },
   "dependencies": {
     "payload": "^1.5.9",
